# Chater-GPT-Backend

./: .gitignore
experimental/: .gitignore  Makefile  pyproject.toml  readme.md
experimental/notebooks/: Experiment 1.ipynb
experimental/sql/: create_tables.sql
src/: main.py
src/config/: configuration.py
src/dao/: promptTemplateDao.py
src/model/: APIRequestModel.py  NewsModel.py  OPENAIResponseModel.py
src/service/: agentService.py  azureSpeechService.py  chatCompletionService.py  promptService.py
src/test/: create_table.sql  langChainTest.py  stressTest.py  test.java  test.py  test.sas  testChatCompletionService.py
src/util/: logger.py
